# PySimpleGUI

./: README.md  exemplo1.py  exemplo2.py  exemplo3.py  exemplo4.py  exemplo5.py  pyproject.toml
