[tool.poetry]
name = "livedepython"
version = "0.1.0"
description = ""
authors = ["felipe <felipecmelo@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
PySimpleGUI = "^4.60.0"
PySimpleGUIQt = "^0.35.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
